Estilos a las preguntas

--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheep" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Quiz</title>
 </head>
 <body>
     <main>
         <h1>Quiz</h1>
         <section id="sec-pregunta">
-            <label class="pregunta"></label>
-            <div class="respuestas"></div>
+            <h2 class="pregunta">Como se llama el chapo?</h2>
+            <div class="respuestas">
+                <input type="radio" name="respuesta" id="respuesta0"><label for="respuesta0">Respuesta</label>
+                <input type="radio" name="respuesta" id="respuesta1"><label for="respuesta1">Respuesta</label>
+                <input type="radio" name="respuesta" id="respuesta2"><label for="respuesta2">Respuesta</label>
+                <input type="radio" name="respuesta" id="respuesta3"><label for="respuesta3">Respuesta</label>
+            </div>
         </section>
     </main>
     <script src="./js/script.js"></script>
